--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <header>
+      <div class="wrapper">
+        <div class="logo">
+          <h1>Projects</h1>
+        </div>
+        <div class="nav-bar">
+          <ul class="nav-links">
+            <li><a href="" class="nav-link">Big projects</a></li>
+            <li><a href="" class="nav-link">Small projects</a></li>
+            <li><a href="" class="nav-link">Css and design</a></li>
+            <li><a href="" class="nav-link">Javascript</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
