--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <div class="wrapper">
+      <div class="navigation">
         <div class="logo">
           <h1>Projects</h1>
         </div>
@@ -26,6 +26,26 @@
         </div>
       </div>
     </header>
+    <section class="wrapper">
+      <div class="projects-grid">
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Big Projects</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Small Projects</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Css and design</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Javascript</h3>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
