added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <div class="nav-bar">
           <ul class="nav-links">
-            <li><a href="" class="nav-link">Big projects</a></li>
-            <li><a href="" class="nav-link">Small projects</a></li>
-            <li><a href="" class="nav-link">Css and design</a></li>
-            <li><a href="" class="nav-link">Javascript</a></li>
+            <li><a href="#" class="nav-link big-p">Big projects</a></li>
+            <li><a href="#" class="nav-link small-p">Small projects</a></li>
+            <li><a href="#" class="nav-link css-d">Css and design</a></li>
+            <li><a href="#" class="nav-link java-s">Javascript</a></li>
           </ul>
         </div>
       </div>
@@ -46,6 +46,82 @@
         </div>
       </div>
     </section>
+    <div class="big-projects">
+      <h1 class="page-title">Big Projects</h1>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 1</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 2</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 3</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />s
+        <h3 class="title">Project 4</h3>
+      </div>
+    </div>
+    <div class="small-projects">
+      <h1 class="page-title">Small Projects</h1>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 1</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 2</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 3</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 4</h3>
+      </div>
+    </div>
+    <div class="css-design">
+      <h1 class="page-title">CSS and Design</h1>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 1</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 2</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 3</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 4</h3>
+      </div>
+    </div>
+    <div class="javascript">
+      <h1 class="page-title">Javascript</h1>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 1</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 2</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 3</h3>
+      </div>
+      <div class="project">
+        <img src="" class="image" />
+        <h3 class="title">Project 4</h3>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
