--- a/index.html
+++ b/index.html
@@ -48,78 +48,86 @@
     </section>
     <div class="big-projects">
       <h1 class="page-title">Big Projects</h1>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 1</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 2</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 3</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />s
-        <h3 class="title">Project 4</h3>
+      <div class="projects-grid">
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 1</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 2</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 3</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 4</h3>
+        </div>
       </div>
     </div>
     <div class="small-projects">
       <h1 class="page-title">Small Projects</h1>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 1</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 2</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 3</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 4</h3>
+      <div class="projects-grid">
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 1</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 2</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 3</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 4</h3>
+        </div>
       </div>
     </div>
     <div class="css-design">
       <h1 class="page-title">CSS and Design</h1>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 1</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 2</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 3</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 4</h3>
+      <div class="projects-grid">
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 1</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 2</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 3</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 4</h3>
+        </div>
       </div>
     </div>
     <div class="javascript">
       <h1 class="page-title">Javascript</h1>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 1</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 2</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 3</h3>
-      </div>
-      <div class="project">
-        <img src="" class="image" />
-        <h3 class="title">Project 4</h3>
+      <div class="projects-grid">
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 1</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 2</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 3</h3>
+        </div>
+        <div class="project">
+          <img src="" class="image" />
+          <h3 class="title">Project 4</h3>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
