added photo and buttons

--- a/index.html
+++ b/index.html
@@ -28,22 +28,10 @@
     </header>
     <section class="wrapper">
       <div class="projects-grid">
-        <div class="project">
-          <img src="" class="image" />
-          <h3 class="title">Big Projects</h3>
-        </div>
-        <div class="project">
-          <img src="" class="image" />
-          <h3 class="title">Small Projects</h3>
-        </div>
-        <div class="project">
-          <img src="" class="image" />
-          <h3 class="title">Css and design</h3>
-        </div>
-        <div class="project">
-          <img src="" class="image" />
-          <h3 class="title">Javascript</h3>
-        </div>
+        <button class="prj-btn big-p">Big Projects</button>
+        <button class="prj-btn small-p">Small Projects</button>
+        <button class="prj-btn css-d">Css and Design</button>
+        <button class="prj-btn java-s">Javascript</button>
       </div>
     </section>
     <div class="big-projects">
